# genetic

./: Cargo.toml  README
src/: main.rs
src/components/: mod.rs
src/neural/: mod.rs
src/resources/: mod.rs
src/systems/: apply_force.rs  apply_velocity.rs  collision_check.rs  control.rs  crossover.rs  mod.rs  mutate.rs  print_stats.rs  rank_selection.rs  reset_positions.rs  reset_scores.rs  reset_velocities.rs  roulette_selection.rs  spawn_new_targets.rs  tick_counter.rs  vision.rs
