[package]
name = "genetic"
version = "0.1.0"
authors = ["heydabop <heydabop@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
specs = { version = "0.16.1", features = ["specs-derive"] }
sdl2 = {version = "0.34.4", features = ["gfx"] }