[package]
name = "genetic"
version = "0.1.0"
authors = ["heydabop <heydabop@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
rand = "0.8.5"
rand_pcg = "0.3.1"
specs = { version = "0.20.0", features = ["specs-derive"] }
sdl2 = {version = "0.35.2", features = ["gfx"] }
